TLC_Gpe_14_Grammaire_v2.output
Terminaux inutilisés dans la grammaire

   T_TYPEFLOAT
   T_TYPEBOOLEAN
   T_TYPEINTEGER


Grammaire

    0 $accept: classe $end

    1 classe: T_CLASS T_NAME T_IS data method T_END T_NAME T_SEMICOLON
    2       | T_CLASS T_NAME T_EXTENDS T_NAME T_IS data method T_END T_NAME T_SEMICOLON

    3 data: T_DATA declaration
    4     | %empty

    5 declaration: T_NAME T_IS T_NAME T_SEMICOLON declaration
    6            | %empty

    7 method: T_METHOD fonction
    8       | %empty

    9 fonction: T_NAME T_PLEFT parametre T_PRIGHT T_IS corps T_SEMICOLON fonction
   10         | %empty

   11 parametre: T_NAME T_COLON T_NAME T_COMMA parametre
   12          | T_NAME T_COLON T_NAME
   13          | %empty

   14 corps: T_NAME T_ASSIGNMENT expression
   15      | T_PLEFT assignment T_PRIGHT
   16      | T_RETURN expression

   17 assignment: T_NAME T_COMMA assignment T_COMMA expression
   18           | T_NAME T_PRIGHT T_ASSIGNMENT T_PLEFT expression

   19 expression: expression T_PLUS expression
   20           | expression T_MINUS expression
   21           | expression T_TIMES expression
   22           | expression T_DIVIDE expression
   23           | T_SQRT T_PLEFT expression T_PRIGHT
   24           | expression T_POWER T_INTEGER
   25           | T_PLEFT expression T_PRIGHT
   26           | T_MINUS expression
   27           | T_INTEGER
   28           | T_FLOAT
   29           | T_BOOLEAN
   30           | T_NAME T_POINT T_NAME


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
T_NAME (258) 1 2 5 9 11 12 14 17 18 30
T_INTEGER (259) 24 27
T_FLOAT (260) 28
T_BOOLEAN (261) 29
T_TYPEFLOAT (262)
T_TYPEBOOLEAN (263)
T_TYPEINTEGER (264)
T_PLUS (265) 19
T_MINUS (266) 20 26
T_TIMES (267) 21
T_DIVIDE (268) 22
T_POWER (269) 24
T_SQRT (270) 23
T_PLEFT (271) 9 15 18 23 25
T_PRIGHT (272) 9 15 18 23 25
T_COMMA (273) 11 17
T_POINT (274) 30
T_COLON (275) 11 12
T_SEMICOLON (276) 1 2 5 9
T_ASSIGNMENT (277) 14 18
T_CLASS (278) 1 2
T_EXTENDS (279) 2
T_DATA (280) 3
T_IS (281) 1 2 5 9
T_METHOD (282) 7
T_RETURN (283) 16
T_END (284) 1 2
NEG (285)


Non-terminaux, suivis des règles où ils apparaissent

$accept (31)
    à gauche: 0
classe (32)
    à gauche: 1 2, à droite: 0
data (33)
    à gauche: 3 4, à droite: 1 2
declaration (34)
    à gauche: 5 6, à droite: 3 5
method (35)
    à gauche: 7 8, à droite: 1 2
fonction (36)
    à gauche: 9 10, à droite: 7 9
parametre (37)
    à gauche: 11 12 13, à droite: 9 11
corps (38)
    à gauche: 14 15 16, à droite: 9
assignment (39)
    à gauche: 17 18, à droite: 15 17
expression (40)
    à gauche: 19 20 21 22 23 24 25 26 27 28 29 30, à droite: 14 16
    17 18 19 20 21 22 23 24 25 26


État 0

    0 $accept: . classe $end

    T_CLASS  décalage et aller à l'état 1

    classe  aller à l'état 2


État 1

    1 classe: T_CLASS . T_NAME T_IS data method T_END T_NAME T_SEMICOLON
    2       | T_CLASS . T_NAME T_EXTENDS T_NAME T_IS data method T_END T_NAME T_SEMICOLON

    T_NAME  décalage et aller à l'état 3


État 2

    0 $accept: classe . $end

    $end  décalage et aller à l'état 4


État 3

    1 classe: T_CLASS T_NAME . T_IS data method T_END T_NAME T_SEMICOLON
    2       | T_CLASS T_NAME . T_EXTENDS T_NAME T_IS data method T_END T_NAME T_SEMICOLON

    T_EXTENDS  décalage et aller à l'état 5
    T_IS       décalage et aller à l'état 6


État 4

    0 $accept: classe $end .

    $défaut  accepter


État 5

    2 classe: T_CLASS T_NAME T_EXTENDS . T_NAME T_IS data method T_END T_NAME T_SEMICOLON

    T_NAME  décalage et aller à l'état 7


État 6

    1 classe: T_CLASS T_NAME T_IS . data method T_END T_NAME T_SEMICOLON

    T_DATA  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 4 (data)

    data  aller à l'état 9


État 7

    2 classe: T_CLASS T_NAME T_EXTENDS T_NAME . T_IS data method T_END T_NAME T_SEMICOLON

    T_IS  décalage et aller à l'état 10


État 8

    3 data: T_DATA . declaration

    T_NAME  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 6 (declaration)

    declaration  aller à l'état 12


État 9

    1 classe: T_CLASS T_NAME T_IS data . method T_END T_NAME T_SEMICOLON

    T_METHOD  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 8 (method)

    method  aller à l'état 14


État 10

    2 classe: T_CLASS T_NAME T_EXTENDS T_NAME T_IS . data method T_END T_NAME T_SEMICOLON

    T_DATA  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 4 (data)

    data  aller à l'état 15


État 11

    5 declaration: T_NAME . T_IS T_NAME T_SEMICOLON declaration

    T_IS  décalage et aller à l'état 16


État 12

    3 data: T_DATA declaration .

    $défaut  réduction par utilisation de la règle 3 (data)


État 13

    7 method: T_METHOD . fonction

    T_NAME  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 10 (fonction)

    fonction  aller à l'état 18


État 14

    1 classe: T_CLASS T_NAME T_IS data method . T_END T_NAME T_SEMICOLON

    T_END  décalage et aller à l'état 19


État 15

    2 classe: T_CLASS T_NAME T_EXTENDS T_NAME T_IS data . method T_END T_NAME T_SEMICOLON

    T_METHOD  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 8 (method)

    method  aller à l'état 20


État 16

    5 declaration: T_NAME T_IS . T_NAME T_SEMICOLON declaration

    T_NAME  décalage et aller à l'état 21


État 17

    9 fonction: T_NAME . T_PLEFT parametre T_PRIGHT T_IS corps T_SEMICOLON fonction

    T_PLEFT  décalage et aller à l'état 22


État 18

    7 method: T_METHOD fonction .

    $défaut  réduction par utilisation de la règle 7 (method)


État 19

    1 classe: T_CLASS T_NAME T_IS data method T_END . T_NAME T_SEMICOLON

    T_NAME  décalage et aller à l'état 23


État 20

    2 classe: T_CLASS T_NAME T_EXTENDS T_NAME T_IS data method . T_END T_NAME T_SEMICOLON

    T_END  décalage et aller à l'état 24


État 21

    5 declaration: T_NAME T_IS T_NAME . T_SEMICOLON declaration

    T_SEMICOLON  décalage et aller à l'état 25


État 22

    9 fonction: T_NAME T_PLEFT . parametre T_PRIGHT T_IS corps T_SEMICOLON fonction

    T_NAME  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 13 (parametre)

    parametre  aller à l'état 27


État 23

    1 classe: T_CLASS T_NAME T_IS data method T_END T_NAME . T_SEMICOLON

    T_SEMICOLON  décalage et aller à l'état 28


État 24

    2 classe: T_CLASS T_NAME T_EXTENDS T_NAME T_IS data method T_END . T_NAME T_SEMICOLON

    T_NAME  décalage et aller à l'état 29


État 25

    5 declaration: T_NAME T_IS T_NAME T_SEMICOLON . declaration

    T_NAME  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 6 (declaration)

    declaration  aller à l'état 30


État 26

   11 parametre: T_NAME . T_COLON T_NAME T_COMMA parametre
   12          | T_NAME . T_COLON T_NAME

    T_COLON  décalage et aller à l'état 31


État 27

    9 fonction: T_NAME T_PLEFT parametre . T_PRIGHT T_IS corps T_SEMICOLON fonction

    T_PRIGHT  décalage et aller à l'état 32


État 28

    1 classe: T_CLASS T_NAME T_IS data method T_END T_NAME T_SEMICOLON .

    $défaut  réduction par utilisation de la règle 1 (classe)


État 29

    2 classe: T_CLASS T_NAME T_EXTENDS T_NAME T_IS data method T_END T_NAME . T_SEMICOLON

    T_SEMICOLON  décalage et aller à l'état 33


État 30

    5 declaration: T_NAME T_IS T_NAME T_SEMICOLON declaration .

    $défaut  réduction par utilisation de la règle 5 (declaration)


État 31

   11 parametre: T_NAME T_COLON . T_NAME T_COMMA parametre
   12          | T_NAME T_COLON . T_NAME

    T_NAME  décalage et aller à l'état 34


État 32

    9 fonction: T_NAME T_PLEFT parametre T_PRIGHT . T_IS corps T_SEMICOLON fonction

    T_IS  décalage et aller à l'état 35


État 33

    2 classe: T_CLASS T_NAME T_EXTENDS T_NAME T_IS data method T_END T_NAME T_SEMICOLON .

    $défaut  réduction par utilisation de la règle 2 (classe)


État 34

   11 parametre: T_NAME T_COLON T_NAME . T_COMMA parametre
   12          | T_NAME T_COLON T_NAME .

    T_COMMA  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 12 (parametre)


État 35

    9 fonction: T_NAME T_PLEFT parametre T_PRIGHT T_IS . corps T_SEMICOLON fonction

    T_NAME    décalage et aller à l'état 37
    T_PLEFT   décalage et aller à l'état 38
    T_RETURN  décalage et aller à l'état 39

    corps  aller à l'état 40


État 36

   11 parametre: T_NAME T_COLON T_NAME T_COMMA . parametre

    T_NAME  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 13 (parametre)

    parametre  aller à l'état 41


État 37

   14 corps: T_NAME . T_ASSIGNMENT expression

    T_ASSIGNMENT  décalage et aller à l'état 42


État 38

   15 corps: T_PLEFT . assignment T_PRIGHT

    T_NAME  décalage et aller à l'état 43

    assignment  aller à l'état 44


État 39

   16 corps: T_RETURN . expression

    T_NAME     décalage et aller à l'état 45
    T_INTEGER  décalage et aller à l'état 46
    T_FLOAT    décalage et aller à l'état 47
    T_BOOLEAN  décalage et aller à l'état 48
    T_MINUS    décalage et aller à l'état 49
    T_SQRT     décalage et aller à l'état 50
    T_PLEFT    décalage et aller à l'état 51

    expression  aller à l'état 52


État 40

    9 fonction: T_NAME T_PLEFT parametre T_PRIGHT T_IS corps . T_SEMICOLON fonction

    T_SEMICOLON  décalage et aller à l'état 53


État 41

   11 parametre: T_NAME T_COLON T_NAME T_COMMA parametre .

    $défaut  réduction par utilisation de la règle 11 (parametre)


État 42

   14 corps: T_NAME T_ASSIGNMENT . expression

    T_NAME     décalage et aller à l'état 45
    T_INTEGER  décalage et aller à l'état 46
    T_FLOAT    décalage et aller à l'état 47
    T_BOOLEAN  décalage et aller à l'état 48
    T_MINUS    décalage et aller à l'état 49
    T_SQRT     décalage et aller à l'état 50
    T_PLEFT    décalage et aller à l'état 51

    expression  aller à l'état 54


État 43

   17 assignment: T_NAME . T_COMMA assignment T_COMMA expression
   18           | T_NAME . T_PRIGHT T_ASSIGNMENT T_PLEFT expression

    T_PRIGHT  décalage et aller à l'état 55
    T_COMMA   décalage et aller à l'état 56


État 44

   15 corps: T_PLEFT assignment . T_PRIGHT

    T_PRIGHT  décalage et aller à l'état 57


État 45

   30 expression: T_NAME . T_POINT T_NAME

    T_POINT  décalage et aller à l'état 58


État 46

   27 expression: T_INTEGER .

    $défaut  réduction par utilisation de la règle 27 (expression)


État 47

   28 expression: T_FLOAT .

    $défaut  réduction par utilisation de la règle 28 (expression)


État 48

   29 expression: T_BOOLEAN .

    $défaut  réduction par utilisation de la règle 29 (expression)


État 49

   26 expression: T_MINUS . expression

    T_NAME     décalage et aller à l'état 45
    T_INTEGER  décalage et aller à l'état 46
    T_FLOAT    décalage et aller à l'état 47
    T_BOOLEAN  décalage et aller à l'état 48
    T_MINUS    décalage et aller à l'état 49
    T_SQRT     décalage et aller à l'état 50
    T_PLEFT    décalage et aller à l'état 51

    expression  aller à l'état 59


État 50

   23 expression: T_SQRT . T_PLEFT expression T_PRIGHT

    T_PLEFT  décalage et aller à l'état 60


État 51

   25 expression: T_PLEFT . expression T_PRIGHT

    T_NAME     décalage et aller à l'état 45
    T_INTEGER  décalage et aller à l'état 46
    T_FLOAT    décalage et aller à l'état 47
    T_BOOLEAN  décalage et aller à l'état 48
    T_MINUS    décalage et aller à l'état 49
    T_SQRT     décalage et aller à l'état 50
    T_PLEFT    décalage et aller à l'état 51

    expression  aller à l'état 61


État 52

   16 corps: T_RETURN expression .
   19 expression: expression . T_PLUS expression
   20           | expression . T_MINUS expression
   21           | expression . T_TIMES expression
   22           | expression . T_DIVIDE expression
   24           | expression . T_POWER T_INTEGER

    T_PLUS    décalage et aller à l'état 62
    T_MINUS   décalage et aller à l'état 63
    T_TIMES   décalage et aller à l'état 64
    T_DIVIDE  décalage et aller à l'état 65
    T_POWER   décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 16 (corps)


État 53

    9 fonction: T_NAME T_PLEFT parametre T_PRIGHT T_IS corps T_SEMICOLON . fonction

    T_NAME  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 10 (fonction)

    fonction  aller à l'état 67


État 54

   14 corps: T_NAME T_ASSIGNMENT expression .
   19 expression: expression . T_PLUS expression
   20           | expression . T_MINUS expression
   21           | expression . T_TIMES expression
   22           | expression . T_DIVIDE expression
   24           | expression . T_POWER T_INTEGER

    T_PLUS    décalage et aller à l'état 62
    T_MINUS   décalage et aller à l'état 63
    T_TIMES   décalage et aller à l'état 64
    T_DIVIDE  décalage et aller à l'état 65
    T_POWER   décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 14 (corps)


État 55

   18 assignment: T_NAME T_PRIGHT . T_ASSIGNMENT T_PLEFT expression

    T_ASSIGNMENT  décalage et aller à l'état 68


État 56

   17 assignment: T_NAME T_COMMA . assignment T_COMMA expression

    T_NAME  décalage et aller à l'état 43

    assignment  aller à l'état 69


État 57

   15 corps: T_PLEFT assignment T_PRIGHT .

    $défaut  réduction par utilisation de la règle 15 (corps)


État 58

   30 expression: T_NAME T_POINT . T_NAME

    T_NAME  décalage et aller à l'état 70


État 59

   19 expression: expression . T_PLUS expression
   20           | expression . T_MINUS expression
   21           | expression . T_TIMES expression
   22           | expression . T_DIVIDE expression
   24           | expression . T_POWER T_INTEGER
   26           | T_MINUS expression .

    T_POWER  décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 26 (expression)


État 60

   23 expression: T_SQRT T_PLEFT . expression T_PRIGHT

    T_NAME     décalage et aller à l'état 45
    T_INTEGER  décalage et aller à l'état 46
    T_FLOAT    décalage et aller à l'état 47
    T_BOOLEAN  décalage et aller à l'état 48
    T_MINUS    décalage et aller à l'état 49
    T_SQRT     décalage et aller à l'état 50
    T_PLEFT    décalage et aller à l'état 51

    expression  aller à l'état 71


État 61

   19 expression: expression . T_PLUS expression
   20           | expression . T_MINUS expression
   21           | expression . T_TIMES expression
   22           | expression . T_DIVIDE expression
   24           | expression . T_POWER T_INTEGER
   25           | T_PLEFT expression . T_PRIGHT

    T_PLUS    décalage et aller à l'état 62
    T_MINUS   décalage et aller à l'état 63
    T_TIMES   décalage et aller à l'état 64
    T_DIVIDE  décalage et aller à l'état 65
    T_POWER   décalage et aller à l'état 66
    T_PRIGHT  décalage et aller à l'état 72


État 62

   19 expression: expression T_PLUS . expression

    T_NAME     décalage et aller à l'état 45
    T_INTEGER  décalage et aller à l'état 46
    T_FLOAT    décalage et aller à l'état 47
    T_BOOLEAN  décalage et aller à l'état 48
    T_MINUS    décalage et aller à l'état 49
    T_SQRT     décalage et aller à l'état 50
    T_PLEFT    décalage et aller à l'état 51

    expression  aller à l'état 73


État 63

   20 expression: expression T_MINUS . expression

    T_NAME     décalage et aller à l'état 45
    T_INTEGER  décalage et aller à l'état 46
    T_FLOAT    décalage et aller à l'état 47
    T_BOOLEAN  décalage et aller à l'état 48
    T_MINUS    décalage et aller à l'état 49
    T_SQRT     décalage et aller à l'état 50
    T_PLEFT    décalage et aller à l'état 51

    expression  aller à l'état 74


État 64

   21 expression: expression T_TIMES . expression

    T_NAME     décalage et aller à l'état 45
    T_INTEGER  décalage et aller à l'état 46
    T_FLOAT    décalage et aller à l'état 47
    T_BOOLEAN  décalage et aller à l'état 48
    T_MINUS    décalage et aller à l'état 49
    T_SQRT     décalage et aller à l'état 50
    T_PLEFT    décalage et aller à l'état 51

    expression  aller à l'état 75


État 65

   22 expression: expression T_DIVIDE . expression

    T_NAME     décalage et aller à l'état 45
    T_INTEGER  décalage et aller à l'état 46
    T_FLOAT    décalage et aller à l'état 47
    T_BOOLEAN  décalage et aller à l'état 48
    T_MINUS    décalage et aller à l'état 49
    T_SQRT     décalage et aller à l'état 50
    T_PLEFT    décalage et aller à l'état 51

    expression  aller à l'état 76


État 66

   24 expression: expression T_POWER . T_INTEGER

    T_INTEGER  décalage et aller à l'état 77


État 67

    9 fonction: T_NAME T_PLEFT parametre T_PRIGHT T_IS corps T_SEMICOLON fonction .

    $défaut  réduction par utilisation de la règle 9 (fonction)


État 68

   18 assignment: T_NAME T_PRIGHT T_ASSIGNMENT . T_PLEFT expression

    T_PLEFT  décalage et aller à l'état 78


État 69

   17 assignment: T_NAME T_COMMA assignment . T_COMMA expression

    T_COMMA  décalage et aller à l'état 79


État 70

   30 expression: T_NAME T_POINT T_NAME .

    $défaut  réduction par utilisation de la règle 30 (expression)


État 71

   19 expression: expression . T_PLUS expression
   20           | expression . T_MINUS expression
   21           | expression . T_TIMES expression
   22           | expression . T_DIVIDE expression
   23           | T_SQRT T_PLEFT expression . T_PRIGHT
   24           | expression . T_POWER T_INTEGER

    T_PLUS    décalage et aller à l'état 62
    T_MINUS   décalage et aller à l'état 63
    T_TIMES   décalage et aller à l'état 64
    T_DIVIDE  décalage et aller à l'état 65
    T_POWER   décalage et aller à l'état 66
    T_PRIGHT  décalage et aller à l'état 80


État 72

   25 expression: T_PLEFT expression T_PRIGHT .

    $défaut  réduction par utilisation de la règle 25 (expression)


État 73

   19 expression: expression . T_PLUS expression
   19           | expression T_PLUS expression .
   20           | expression . T_MINUS expression
   21           | expression . T_TIMES expression
   22           | expression . T_DIVIDE expression
   24           | expression . T_POWER T_INTEGER

    T_TIMES   décalage et aller à l'état 64
    T_DIVIDE  décalage et aller à l'état 65
    T_POWER   décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 19 (expression)


État 74

   19 expression: expression . T_PLUS expression
   20           | expression . T_MINUS expression
   20           | expression T_MINUS expression .
   21           | expression . T_TIMES expression
   22           | expression . T_DIVIDE expression
   24           | expression . T_POWER T_INTEGER

    T_TIMES   décalage et aller à l'état 64
    T_DIVIDE  décalage et aller à l'état 65
    T_POWER   décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 20 (expression)


État 75

   19 expression: expression . T_PLUS expression
   20           | expression . T_MINUS expression
   21           | expression . T_TIMES expression
   21           | expression T_TIMES expression .
   22           | expression . T_DIVIDE expression
   24           | expression . T_POWER T_INTEGER

    T_POWER  décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 21 (expression)


État 76

   19 expression: expression . T_PLUS expression
   20           | expression . T_MINUS expression
   21           | expression . T_TIMES expression
   22           | expression . T_DIVIDE expression
   22           | expression T_DIVIDE expression .
   24           | expression . T_POWER T_INTEGER

    T_POWER  décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 22 (expression)


État 77

   24 expression: expression T_POWER T_INTEGER .

    $défaut  réduction par utilisation de la règle 24 (expression)


État 78

   18 assignment: T_NAME T_PRIGHT T_ASSIGNMENT T_PLEFT . expression

    T_NAME     décalage et aller à l'état 45
    T_INTEGER  décalage et aller à l'état 46
    T_FLOAT    décalage et aller à l'état 47
    T_BOOLEAN  décalage et aller à l'état 48
    T_MINUS    décalage et aller à l'état 49
    T_SQRT     décalage et aller à l'état 50
    T_PLEFT    décalage et aller à l'état 51

    expression  aller à l'état 81


État 79

   17 assignment: T_NAME T_COMMA assignment T_COMMA . expression

    T_NAME     décalage et aller à l'état 45
    T_INTEGER  décalage et aller à l'état 46
    T_FLOAT    décalage et aller à l'état 47
    T_BOOLEAN  décalage et aller à l'état 48
    T_MINUS    décalage et aller à l'état 49
    T_SQRT     décalage et aller à l'état 50
    T_PLEFT    décalage et aller à l'état 51

    expression  aller à l'état 82


État 80

   23 expression: T_SQRT T_PLEFT expression T_PRIGHT .

    $défaut  réduction par utilisation de la règle 23 (expression)


État 81

   18 assignment: T_NAME T_PRIGHT T_ASSIGNMENT T_PLEFT expression .
   19 expression: expression . T_PLUS expression
   20           | expression . T_MINUS expression
   21           | expression . T_TIMES expression
   22           | expression . T_DIVIDE expression
   24           | expression . T_POWER T_INTEGER

    T_PLUS    décalage et aller à l'état 62
    T_MINUS   décalage et aller à l'état 63
    T_TIMES   décalage et aller à l'état 64
    T_DIVIDE  décalage et aller à l'état 65
    T_POWER   décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 18 (assignment)


État 82

   17 assignment: T_NAME T_COMMA assignment T_COMMA expression .
   19 expression: expression . T_PLUS expression
   20           | expression . T_MINUS expression
   21           | expression . T_TIMES expression
   22           | expression . T_DIVIDE expression
   24           | expression . T_POWER T_INTEGER

    T_PLUS    décalage et aller à l'état 62
    T_MINUS   décalage et aller à l'état 63
    T_TIMES   décalage et aller à l'état 64
    T_DIVIDE  décalage et aller à l'état 65
    T_POWER   décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 17 (assignment)
